--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <html lang="en">
 
 <head>
-	<title>Massively test by HTML5 UP</title>
+	<title>Massively by HTML5 UP</title>
 	<meta charset="utf-8" />
-	<meta name="description" content="Massively by HTML5 UP" />
+	<meta name="viewport" content="width=device-width, initial-scale-1.0" <meta name="description"
+		content="Massively by HTML5 UP" />
 	<link rel="stylesheet" href="assets/css/fonts.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<script src="assets/js/jquery.min.js"></script>
